--- a/frontend/src/app/auth/login/login.component.html
+++ b/frontend/src/app/auth/login/login.component.html
@@ -10,7 +10,7 @@
       <nb-card-header class="h3 text-center">{{ 'login.select_login' | translate }}</nb-card-header>
       <nb-card-body class="py-0">
         <div class="row">
-           <nb-card class="col-lg-6 py-1">
+          <nb-card class="col-lg-6 py-1">
             <nb-card-header>
               <h2 class="h3 mb-3 font-weight-bold text-center">{{ 'login.login_with_local_idm' | translate }}</h2>
               <p class="text-center">{{ 'login.login_with_local_idm_description' | translate }}</p>
@@ -25,7 +25,8 @@
                 aria-haspopup="true"
                 aria-expanded="false"
                 (click)="login()"
-              > <!--localIdM-button-size-l-->
+              >
+                <!--localIdM-button-size-l-->
                 <span class="italia-it-button-text">{{ 'login.login_with_local_idm' | translate }}</span>
               </a>
             </nb-card-body>
@@ -67,7 +68,6 @@
             </div>
           </nb-card>
         </div>
-
       </nb-card-body>
     </nb-card>
   </nb-layout-column>
