--- a/frontend/src/app/pages/home/details/details.component.html
+++ b/frontend/src/app/pages/home/details/details.component.html
@@ -14,38 +14,46 @@
       <div>
         <div class="col-sm py-2">
           <div class="col-sm">
-            {{value?.description ? value?.description : ""}}
+            {{ value?.description ? value?.description : '' }}
           </div>
         </div>
-        <div style="margin-top:10px"><br></div>
+        <div style="margin-top: 10px"><br /></div>
         <div>
           <div class="col-sm py-1">
             <div class="accent">
-              <i><b>{{ 'general.dmm._id' | translate }}:</b> {{ data._id }}</i>
+              <i
+                ><b>{{ 'general.dmm._id' | translate }}:</b> {{ data._id }}</i
+              >
             </div>
           </div>
         </div>
-        <div style="margin-top:10px"><br></div>
+        <div style="margin-top: 10px"><br /></div>
         <div>
           <div class="col-sm py-1">
             <div class="accent">
-              <i><b>{{ 'general.dmm.name' | translate }}:</b> {{ value.name}}</i>
+              <i
+                ><b>{{ 'general.dmm.name' | translate }}:</b> {{ value.name }}</i
+              >
             </div>
           </div>
         </div>
-        <div style="margin-top:10px"><br></div>
+        <div style="margin-top: 10px"><br /></div>
         <div>
           <div class="col-sm py-1">
             <div class="accent">
-              <i><b>{{ 'general.dmm.description' | translate }}:</b> {{ data.description }}</i>
+              <i
+                ><b>{{ 'general.dmm.description' | translate }}:</b> {{ data.description }}</i
+              >
             </div>
           </div>
         </div>
-        <div style="margin-top:10px"><br></div>
+        <div style="margin-top: 10px"><br /></div>
         <div>
           <div class="col-sm py-1">
             <div class="accent">
-              <i><b>{{ 'general.dmm.status' | translate }}:</b> {{ data.status }}</i>
+              <i
+                ><b>{{ 'general.dmm.status' | translate }}:</b> {{ data.status }}</i
+              >
             </div>
           </div>
         </div>
