--- a/frontend/src/app/pages/data-model-mapper/create-map/create-map.component.html
+++ b/frontend/src/app/pages/data-model-mapper/create-map/create-map.component.html
@@ -1,7 +1,6 @@
 <nb-card *ngIf="!message">
-
   <nb-card-header class="d-flex align-content-center justify-content-between">
-    <div> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </div>
+    <div>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</div>
     <div *ngIf="!save">
       <h3>{{ 'general.dmm.edit' | translate }}</h3>
     </div>
@@ -16,49 +15,71 @@
     <h6>
       <form>
         <label for="name" fullWidth>{{ 'general.mapperRecords.name' | translate }}</label>
-        <br>
-        <input *ngIf="save" [(ngModel)]="name" nbInput type="text" fullWidth
-          placeholder="{{ 'general.mapperRecords.name' | translate }}" [ngModelOptions]="{standalone: true}" />
-        <input *ngIf="!save" [(ngModel)]="name" nbInput type="text" fullWidth
-          placeholder="{{ 'general.mapperRecords.name' | translate }}" [ngModelOptions]="{standalone: true}" disabled="true"/>
-        <br>
-        <br>
+        <br />
+        <input
+          *ngIf="save"
+          [(ngModel)]="name"
+          nbInput
+          type="text"
+          fullWidth
+          placeholder="{{ 'general.mapperRecords.name' | translate }}"
+          [ngModelOptions]="{ standalone: true }"
+        />
+        <input
+          *ngIf="!save"
+          [(ngModel)]="name"
+          nbInput
+          type="text"
+          fullWidth
+          placeholder="{{ 'general.mapperRecords.name' | translate }}"
+          [ngModelOptions]="{ standalone: true }"
+          disabled="true"
+        />
+        <br />
+        <br />
         <label for="description" fullWidth>{{ 'general.mapperRecords.description' | translate }}</label>
-        <br>
-        <input [(ngModel)]="description" nbInput type="text" fullWidth
-          placeholder="{{ 'general.mapperRecords.description' | translate }}" [ngModelOptions]="{standalone: true}" />
-        <br>
-        <br>
+        <br />
+        <input
+          [(ngModel)]="description"
+          nbInput
+          type="text"
+          fullWidth
+          placeholder="{{ 'general.mapperRecords.description' | translate }}"
+          [ngModelOptions]="{ standalone: true }"
+        />
+        <br />
+        <br />
         <label for="status" fullWidth>{{ 'general.mapperRecords.status' | translate }}</label>
-        <br>
-        <nb-select fullWidth placeholder="Under development" [(ngModel)]="status" (click)="fixBrokenPageBug()"
-          [ngModelOptions]="{standalone: true}">
+        <br />
+        <nb-select
+          fullWidth
+          placeholder="Under development"
+          [(ngModel)]="status"
+          (click)="fixBrokenPageBug()"
+          [ngModelOptions]="{ standalone: true }"
+        >
           <nb-option value="Completed">Completed</nb-option>
           <nb-option value="Under development">Under development</nb-option>
         </nb-select>
-        <br>
-        <br>
-        <nb-checkbox *ngIf="unsaved.schema" [(ngModel)]="saveSchema" [ngModelOptions]="{standalone: true}">{{
-          schemaSaved ?
-          ('general.dmm.update_schema' | translate) : ('general.dmm.save_schema' | translate) }} </nb-checkbox>
-        <br>
-        <br>
-        <nb-checkbox *ngIf="unsaved.source" [(ngModel)]="saveSource" [ngModelOptions]="{standalone: true}">{{
-          sourceSaved?
-          ('general.dmm.update_source' | translate) : ('general.dmm.save_source' | translate) }} </nb-checkbox>
-        <br>
-        <br>
+        <br />
+        <br />
+        <nb-checkbox *ngIf="unsaved.schema" [(ngModel)]="saveSchema" [ngModelOptions]="{ standalone: true }"
+          >{{ schemaSaved ? ('general.dmm.update_schema' | translate) : ('general.dmm.save_schema' | translate) }}
+        </nb-checkbox>
+        <br />
+        <br />
+        <nb-checkbox *ngIf="unsaved.source" [(ngModel)]="saveSource" [ngModelOptions]="{ standalone: true }"
+          >{{ sourceSaved ? ('general.dmm.update_source' | translate) : ('general.dmm.save_source' | translate) }}
+        </nb-checkbox>
+        <br />
+        <br />
         <h3>
-          <br>
-          <button *ngIf="!name" disabled nbButton appearance="outline" shape="semi-round" size="medium" status="info"
-            (click)="confirm()">
-            <i class="mx-1">{{ (save) ? ('general.dmm.confirmSave' | translate) : ('general.dmm.confirmEdit' |
-              translate) }}</i>
+          <br />
+          <button *ngIf="!name" disabled nbButton appearance="outline" shape="semi-round" size="medium" status="info" (click)="confirm()">
+            <i class="mx-1">{{ save ? ('general.dmm.confirmSave' | translate) : ('general.dmm.confirmEdit' | translate) }}</i>
           </button>
-          <button *ngIf="name" nbButton appearance="outline" shape="semi-round" size="medium" status="info"
-            (click)="confirm()">
-            <i class="mx-1">{{ (save) ? ('general.dmm.confirmSave' | translate) : ('general.dmm.confirmEdit' |
-              translate) }}</i>
+          <button *ngIf="name" nbButton appearance="outline" shape="semi-round" size="medium" status="info" (click)="confirm()">
+            <i class="mx-1">{{ save ? ('general.dmm.confirmSave' | translate) : ('general.dmm.confirmEdit' | translate) }}</i>
           </button>
           &nbsp;
         </h3>
@@ -68,8 +89,8 @@
 </nb-card>
 <nb-card *ngIf="message">
   <nb-card-header class="d-flex align-content-center justify-content-between">
-    <div> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </div>
-    <h3> Warning</h3>
+    <div>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</div>
+    <h3>Warning</h3>
     <button nbButton appearance="outline" shape="semi-round" size="tiny" status="info" (click)="cancel()">
       <i class="material-icons">close</i>
     </button>
@@ -77,15 +98,12 @@
   <nb-card-body class="m-2 p-4">
     <h6>
       <form>
-        {{message}}
-        <br>
-        <br>
+        {{ message }}
+        <br />
+        <br />
         <h3>
-          <br>
-          <button nbButton appearance="outline" shape="semi-round" size="medium" status="info"
-            (click)="confirmSubmit()">
-            Confirm
-          </button>
+          <br />
+          <button nbButton appearance="outline" shape="semi-round" size="medium" status="info" (click)="confirmSubmit()">Confirm</button>
           &nbsp;
         </h3>
       </form>
