--- a/frontend/src/app/pages/data-model-mapper/export-file/export-file.component.html
+++ b/frontend/src/app/pages/data-model-mapper/export-file/export-file.component.html
@@ -1,6 +1,6 @@
 <nb-card style="width: 500px; height: 410px">
   <nb-card-header class="d-flex align-content-center justify-content-between">
-    <div> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </div>
+    <div>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</div>
     <div>
       <h3>{{ 'general.dmm.add' | translate }}</h3>
     </div>
@@ -12,21 +12,20 @@
     <h6>
       <form>
         <label for="Mode" fullWidth>{{ 'general.dmm.mode' | translate }}</label>
-        <br>
-        <nb-select fullWidth placeholder="Snippet" [(ngModel)]="mode" (click)="fixBrokenPageBug()"
-          [ngModelOptions]="{standalone: true}">
+        <br />
+        <nb-select fullWidth placeholder="Snippet" [(ngModel)]="mode" (click)="fixBrokenPageBug()" [ngModelOptions]="{ standalone: true }">
           <nb-option value="snippet">Snippet</nb-option>
           <nb-option value="file">File</nb-option>
         </nb-select>
       </form>
     </h6>
-    <br>
-    <br>
+    <br />
+    <br />
   </nb-card-body>
   <div class="center">
-    <br>
+    <br />
     <button nbButton appearance="outline" shape="semi-round" size="medium" status="info" (click)="save()">
-      <i class="mx-1">{{ 'general.dmm.confirmSave' | translate}}</i>
+      <i class="mx-1">{{ 'general.dmm.confirmSave' | translate }}</i>
     </button>
   </div>
 </nb-card>
