--- a/frontend/src/app/@theme/components/header/header.component.html
+++ b/frontend/src/app/@theme/components/header/header.component.html
@@ -3,8 +3,8 @@
     <a (click)="toggleSidebar()" href="#" class="sidebar-toggle">
       <nb-icon icon="menu-2-outline"></nb-icon>
     </a>
-    <!--<a class="logo" href="#" (click)="navigateHome()"><img src="assets\images\app\dmm-logo.png" style="height: 64px" /></a>-->
-    <h6 style="padding-top: 10px">Data Model Mapper</h6>
+    <a class="logo" href="#" (click)="navigateHome()"><img src="assets\images\app\dmm-logo.png" style="height: 64px" /></a>
+    <!--<h6 style="padding-top: 10px">Data Model Mapper</h6>-->
   </div>
 </div>
 
