update test : export file

--- a/frontend/src/app/pages/data-model-mapper/dmm.component.html
+++ b/frontend/src/app/pages/data-model-mapper/dmm.component.html
@@ -32,7 +32,7 @@
           {{ 'general.editor.update' | translate }}
           <i class="mx-1 material-icons">update</i>
         </button>
-        <button id="saveAsFile" nbButton class="mx-4" shape="rectangle" size="medium" status="warning" (click)="saveAsFile()">
+        <button id="saveAsFile" nbButton class="mx-4" shape="rectangle" size="medium" status="warning" (click)="saveAsFile(ExportFileComponent)">
           {{ 'general.editor.export' | translate }}
           <i class="mx-1 fas fa-file-export fa-lg"></i>
         </button>
