--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,3 +8,16 @@ nb-layout-column {
     height: 100%;
 }
 
+/*table.custom-table {
+  background-color: #00ff95 !important;
+  color: #333 !important;
+}
+
+table.custom-table thead {
+  background-color: #fbff00 !important;
+  color: rgb(131, 55, 55) !important;
+}
+
+table.custom-table tbody tr:hover {
+  background-color: #ff0080 !important;
+}*/
