--- a/frontend/src/app/@theme/styles/styles.scss
+++ b/frontend/src/app/@theme/styles/styles.scss
@@ -417,10 +417,14 @@ nb-toggle {
 
 /*Angular smart-table*/
 ng2-smart-table table thead tr {
+  //background-color: #233b0d !important;
+  //color: #ffffff !important;
   background-color: nb-theme(color-primary-400);
 }
 
 ng2-smart-table table thead tr:nth-child(2) {
+  //background-color: #3d7e00 !important;
+  //color: #ffffff !important;
   background-color: nb-theme(color-primary-100);
 }
 
@@ -431,7 +435,55 @@ ng2-smart-table table tr.ng2-smart-titles th a:active,
 ng2-smart-table table tr.ng2-smart-titles th a:visited {
   color: nb-theme(color-basic-100);
   font-weight: bold;
+  //background-color: #182909 !important;
+  //color: #ffffff !important;
 }
+
+ng2-smart-table table tr.ng2-smart-titles th a.sort {
+  position: relative;
+  display: inline-block;
+  padding-right: 90%; // Spazio extra per il triangolino
+}
+
+ng2-smart-table table tr.ng2-smart-titles th a.sort::before,
+ng2-smart-table table tr.ng2-smart-titles th a.sort::after {
+  content: '';
+  position: absolute;
+  right: 10px;// 4%; // Sposta il triangolino più a destra (aumenta se vuoi ancora più margine)
+  top: 50%;
+  transform: translateY(-50%);
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  transition: opacity 0.3s ease;
+  opacity: 0;
+}
+
+ng2-smart-table table tr.ng2-smart-titles th a.sort.asc::after {
+  border-bottom: 6px solid #ffffff;
+  opacity: 1;
+}
+
+ng2-smart-table table tr.ng2-smart-titles th a.sort.desc::before {
+  border-top: 6px solid #ffffff;
+  opacity: 1;
+}
+
+
+
+/*table.custom-table {
+  background-color: #00ff95 !important;
+  color: #333 !important;
+}
+
+table.custom-table thead {
+  background-color: #fbff00 !important;
+  color: rgb(0, 255, 42) !important;
+}*/
+
+//table.custom-table tbody tr:hover {
+//  background-color: #ff0080 !important;
+//}
+
 
 /*Custom tables*/
 .gridTable {
